style.css
/* spacing on all sections */
.section {
    margin-top: 4rem;
    padding-top: 4rem;
}
.section:last-of-type {
    padding-bottom: 4rem;
}

.hero_title {
    padding-top: 10rem;
    padding-left: 10rem;
    text-align: center;
    font-size: 4.5rem;
}
.hero_desc {
    font-size: 2rem;
    text-align: center;
    padding-left: 5rem;
}
.about_me_title {
    padding-top: 3rem;
    font-size: 3rem;
}
.about_me_desc {
    padding-right: 5rem;
    padding-left: 7rem;
    /*text-align: center;*/
}
.about_me_points {
    padding-right: 5rem;
    padding-left: 7rem;
    /*text-align: center;*/
}

.main_banner {
    height:100vh;
    position:relative;
    padding: 0;
    margin: 0;
}

.my_projects{
    padding-top: 10rem;
    padding-right: 10rem;
}
.social-icons {
    font-size: 36px;
    cursor: pointer;
}
/*.fa-facebook:hover,
.fa-instagram:hover,
.fa-twitter:hover,
.fa-linkedin:hover, 
.fa-twitch:hover {
    color: #fff;
}
.fab {
    color: #000000;
}

.servicesText.card {
    height: 280px;
    cursor: pointer;
  }
.servicesIcon {
    font-size: 36px;
    text-align: center;
    width: 100%;
}*/
.card-title {
    text-align: center;
}
.card:hover .servicesIcon {
    color: #008000;
}
.servicesText:hover {
    border: 1px solid #008000;
}

.resize{
    width: 150px;
    height: auto;
}

